[gd_scene format=3 uid="uid://b6nyk2p7ni67v"]

[ext_resource type="Script" uid="uid://b6w6bl30kn413" path="res://scripts/gui/terminal_interface.gd" id="1_e2q8s"]
[ext_resource type="Texture2D" uid="uid://d2ruo3rtovaad" path="res://assets/sprites/ui/menu.png" id="2_3xvm2"]
[ext_resource type="Texture2D" uid="uid://dptksms4co866" path="res://assets/sprites/icon.svg" id="2_yyxlr"]
[ext_resource type="Theme" uid="uid://bcjosjn0mg65v" path="res://themes/terminalTheme.tres" id="3_3xvm2"]
[ext_resource type="FontFile" uid="uid://crk5bhesu6ahf" path="res://assets/fonts/PixelOperator8.ttf" id="5_vd6u3"]
[ext_resource type="Script" uid="uid://g3qqurifaohe" path="res://scripts/gui/bottom_left_panel.gd" id="6_yyxlr"]
[ext_resource type="PackedScene" uid="uid://ck7e6ovbj6v8t" path="res://scenes/guiStuff/descriptorChallengeScene.tscn" id="7_nnsai"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nnsai"]
texture = ExtResource("2_3xvm2")
region_rect = Rect2(837, 93, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vd6u3"]
texture = ExtResource("2_3xvm2")
region_rect = Rect2(869, 95, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h5qh6"]
texture = ExtResource("2_3xvm2")
region_rect = Rect2(869, 95, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jbcbu"]
texture = ExtResource("2_3xvm2")
region_rect = Rect2(709, 157, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_55iky"]
texture = ExtResource("2_3xvm2")
region_rect = Rect2(741, 159, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aldgn"]
texture = ExtResource("2_3xvm2")
region_rect = Rect2(741, 159, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e2q8s"]
texture = ExtResource("2_3xvm2")
region_rect = Rect2(837, 61, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yyxlr"]
texture = ExtResource("2_3xvm2")
region_rect = Rect2(869, 63, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3xvm2"]
texture = ExtResource("2_3xvm2")
region_rect = Rect2(869, 63, 22, 22)

[node name="Control" type="Control" unique_id=1037683151]
modulate = Color(1, 1, 1, 0.9529412)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_e2q8s")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1810340342]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.057982344, 0.057982344, 0.057982344, 0.50980395)

[node name="NinePatchRect" type="NinePatchRect" parent="." unique_id=1004265589]
custom_minimum_size = Vector2(370, 160)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("2_3xvm2")
region_rect = Rect2(709, 157, 22, 24)
patch_margin_left = 5
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="vert" type="VBoxContainer" parent="NinePatchRect" unique_id=266029036]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/vert" unique_id=613640051]
custom_minimum_size = Vector2(370, 25)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_3xvm2")
region_rect = Rect2(59, 148, 26, 26)
patch_margin_left = 5
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/vert/NinePatchRect" unique_id=22655580]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/vert/NinePatchRect/MarginContainer" unique_id=74510452]
layout_mode = 2

[node name="goBack" type="Button" parent="NinePatchRect/vert/NinePatchRect/MarginContainer/HBoxContainer" unique_id=685702835]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_nnsai")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vd6u3")
theme_override_styles/hover = SubResource("StyleBoxTexture_h5qh6")

[node name="helpButton" type="Button" parent="NinePatchRect/vert/NinePatchRect/MarginContainer/HBoxContainer" unique_id=1456134593]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_jbcbu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_55iky")
theme_override_styles/hover = SubResource("StyleBoxTexture_aldgn")

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/vert/NinePatchRect/MarginContainer/HBoxContainer" unique_id=125981785]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_vd6u3")
placeholder_text = "Insert the flag here"
alignment = 1
max_length = 60

[node name="submitFlag" type="Button" parent="NinePatchRect/vert/NinePatchRect/MarginContainer/HBoxContainer" unique_id=2108127680]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_e2q8s")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yyxlr")
theme_override_styles/hover = SubResource("StyleBoxTexture_3xvm2")

[node name="Grid" type="GridContainer" parent="NinePatchRect/vert" unique_id=193354443]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/vert/Grid" unique_id=307055628]
custom_minimum_size = Vector2(370, 160)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_3xvm2")
region_rect = Rect2(741, 31, 22, 22)
patch_margin_left = 5
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/vert/Grid/NinePatchRect" unique_id=1086237064]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TopLeftImage" type="TextureRect" parent="NinePatchRect/vert/Grid/NinePatchRect/MarginContainer" unique_id=2014968855]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_yyxlr")
stretch_mode = 5

[node name="NinePatchRect2" type="NinePatchRect" parent="NinePatchRect/vert/Grid" unique_id=661867915]
custom_minimum_size = Vector2(370, 160)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_3xvm2")
region_rect = Rect2(741, 31, 22, 22)
patch_margin_left = 5
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/vert/Grid/NinePatchRect2" unique_id=894929739]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TopRightEditor" type="TextEdit" parent="NinePatchRect/vert/Grid/NinePatchRect2/MarginContainer" unique_id=709924448]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_3xvm2")
theme_override_font_sizes/font_size = 10
placeholder_text = "Docker terminal"
wrap_mode = 1
caret_type = 1
caret_blink = true

[node name="NinePatchRect3" type="NinePatchRect" parent="NinePatchRect/vert/Grid" unique_id=1746332529]
custom_minimum_size = Vector2(370, 160)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_3xvm2")
region_rect = Rect2(741, 31, 22, 22)
patch_margin_left = 5
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/vert/Grid/NinePatchRect3" unique_id=1260891342]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("6_yyxlr")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/vert/Grid/NinePatchRect3/MarginContainer" unique_id=1109148895]
layout_mode = 2

[node name="SearchBar" type="HBoxContainer" parent="NinePatchRect/vert/Grid/NinePatchRect3/MarginContainer/VBoxContainer" unique_id=1479880813]
layout_mode = 2
size_flags_vertical = 0

[node name="SearchInput" type="LineEdit" parent="NinePatchRect/vert/Grid/NinePatchRect3/MarginContainer/VBoxContainer/SearchBar" unique_id=1957472188]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_vd6u3")

[node name="ManViewer" type="TextEdit" parent="NinePatchRect/vert/Grid/NinePatchRect3/MarginContainer/VBoxContainer" unique_id=217777976]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_vd6u3")
theme_override_font_sizes/font_size = 12
placeholder_text = "Search a command"
editable = false
wrap_mode = 1
scroll_smooth = true

[node name="NinePatchRect4" type="NinePatchRect" parent="NinePatchRect/vert/Grid" unique_id=1379311549]
custom_minimum_size = Vector2(370, 160)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_3xvm2")
region_rect = Rect2(741, 31, 22, 22)
patch_margin_left = 5
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/vert/Grid/NinePatchRect4" unique_id=280361752]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/vert/Grid/NinePatchRect4/MarginContainer" unique_id=1262203159]
layout_mode = 2

[node name="TerminalButton" type="Button" parent="NinePatchRect/vert/Grid/NinePatchRect4/MarginContainer/GridContainer" unique_id=1112963645]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Open another terminal"

[node name="SecondTerminal" type="TextEdit" parent="NinePatchRect/vert/Grid/NinePatchRect4/MarginContainer/GridContainer" unique_id=2135055046]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_3xvm2")
wrap_mode = 1

[node name="wrongFlagColor" type="ColorRect" parent="." unique_id=49729003]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.5019608)

[node name="HelpScene" parent="." unique_id=444446606 instance=ExtResource("7_nnsai")]
visible = false
layout_mode = 1

[connection signal="pressed" from="NinePatchRect/vert/NinePatchRect/MarginContainer/HBoxContainer/goBack" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="NinePatchRect/vert/NinePatchRect/MarginContainer/HBoxContainer/helpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="NinePatchRect/vert/NinePatchRect/MarginContainer/HBoxContainer/submitFlag" to="." method="_on_submit_flag_pressed"]
[connection signal="pressed" from="NinePatchRect/vert/Grid/NinePatchRect4/MarginContainer/GridContainer/TerminalButton" to="." method="_on_terminal_button_pressed"]
